# hw_14.1

./: .coverage  .env.pub  .gitignore  README.md  main.py  pyproject.toml
html_coverage/: .coverage
myproject/: pyproject.toml
src/: SQL_experiments.py  abstract_classes.py  classes.py  classes_abc.py  experiments_witw_oop.py  main.py  print_mixin.py  read_json_products.py
tests/: test_classes.py  test_exception.py  test_print_mixin.py
